# fastapi-azure-auth

./: .codecov.yml  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  lunr-index-1630354961698.json  lunr-index-1630355203305.json  lunr-index-1630355418013.json  lunr-index-1630356683326.json  lunr-index-1630500591186.json  lunr-index-1630520540283.json  lunr-index-1632122486268.json  lunr-index-1634558904931.json  lunr-index-1634741884908.json  lunr-index-1642250217609.json  lunr-index-1646667356394.json  lunr-index-1649097745119.json  lunr-index-1649667731288.json  lunr-index-1649849343047.json  lunr-index-1649851189534.json  lunr-index-1651430524243.json  lunr-index-1654518529498.json  lunr-index-1677439198614.json  lunr-index-1680269903102.json  lunr-index-1680272591255.json  lunr-index-1680608674522.json  lunr-index-1685362986685.json  lunr-index-1694715377332.json  lunr-index-1696422141839.json  lunr-index-1696423261653.json  lunr-index-1697640977108.json  lunr-index-1697641054661.json  lunr-index-1698688944951.json  lunr-index-1698689072801.json  (+44 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report-question.md  feature_request.md  security.md
.github/workflows/: codeql-analysis.yaml  coverage.yaml  publish_docs.yaml  publish_to_pypi.yaml  testing.yaml
assets/css/: styles.38cd6852.css  styles.3f51c63d.css  styles.4d78132b.css  styles.7d422d51.css  styles.a0f9a464.css  styles.ae751ed6.css  styles.c6960551.css
assets/js/: 0b387740.28a8383c.js  0b387740.3b44cbf7.js  0b387740.4be79a94.js  0b387740.562a25e7.js  0b387740.5d6e1cd7.js  0b387740.72a239c9.js  0b387740.83ad0ce2.js  0b387740.83d404fd.js  0b387740.a47492e4.js  0b387740.a677cb05.js  0b387740.bab59d64.js  0b387740.e6fd7a5d.js  0b387740.eb19ea99.js  0e0048d6.1c47b079.js  0e0048d6.2317320c.js  0e0048d6.23f4ba2b.js  0e0048d6.2a6601df.js  0e0048d6.2ae5bcdc.js  0e0048d6.31268657.js  0e0048d6.42586ad8.js  0e0048d6.45000782.js  0e0048d6.5144c6e1.js  0e0048d6.814bb460.js  0e0048d6.84e6772e.js  0e0048d6.8ccfc931.js  0e0048d6.dd6d02cf.js  0e0048d6.e18b120f.js  0e0048d6.ed352650.js  159.79cb896a.js  17896441.2cbddb3f.js  17896441.810d03c7.js  17896441.8367d4b5.js  17896441.f1877f92.js  17896441.f85a8c38.js  1ad6a286.212c3a30.js  1ad6a286.8ae3f9b1.js  1ad6a286.9e1f6cc0.js  1ad6a286.a6700a91.js  1ad6a286.a6c7adf9.js  1ad6a286.c906af0f.js  (+284 more)
b2c/azure_setup/: index.html
b2c/fastapi_configuration/: index.html
blog/archive/: index.html
demo_project/: .env.example  main.py
demo_project/api/: dependencies.py
demo_project/api/api_v1/: api.py
demo_project/api/api_v1/endpoints/: graph.py  hello_world.py  hello_world_multi_auth.py
demo_project/core/: config.py
demo_project/schemas/: hello_world.py
demoproj/api/: dependencies.py
demoproj/api/api_v1/: api.py
demoproj/api/api_v1/endpoints/: hello_world.py
demoproj/core/: config.py
demoproj/schemas/: hello_world.py
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebarsMultiTenant.js
docs/docs/: installation.mdx  introduction.mdx
docs/docs/b2c/: _category_.json  azure_setup.mdx  fastapi_configuration.mdx
docs/docs/multi-tenant/: _category_.json  accept_specific_tenants_only.mdx  azure_setup.mdx  fastapi_configuration.mdx  guest_users.mdx  locking_down_on_roles.mdx
docs/docs/settings/: _category_.json  b2c.mdx  multi_tenant.mdx  single_tenant.mdx
docs/docs/single-tenant/: _category_.json  azure_setup.mdx  fastapi_configuration.mdx  guest_users.mdx  locking_down_on_roles.mdx
docs/docs/usage-and-faq/: _category_.json  accessing_the_user.mdx  admin_consent_when_logging_in.mdx  calling_your_apis_from_python.mdx  graph_usage.mdx  guest_users.mdx  locking_down_on_roles.mdx  testing.mdx  troubleshooting.mdx
docs/multi-tenant/: installation.mdx  introduction.mdx
docs/single-tenant/: introduction.mdx
docs/src/components/: HomepageFeatures.js
docs/src/pages/: index.js
fastapi_azure_auth/: __init__.py  auth.py  exceptions.py  openid_config.py  provider_config.py  user.py  utils.py
installation/: index.html
intility_auth_fastapi/: auth.py  provider_config.py
multi-tenant/accept_specific_tenants_only/: index.html
multi-tenant/azure_setup/: index.html
multi-tenant/fastapi_configuration/: index.html
multi-tenant/guest_users/: index.html
multi-tenant/locking_down_on_roles/: index.html
settings/b2c/: index.html
settings/multi_tenant/: index.html
settings/single_tenant/: index.html
single-tenant/azure_setup/: index.html
single-tenant/fastapi_configuration/: index.html
single-tenant/guest_users/: index.html
single-tenant/locking_down_on_roles/: index.html
tags/: index.html
tests/: .env.test  README.md  conftest.py  test_claims_validator.py  test_guest_user.py  test_openapi_scheme.py  test_provider_config.py  test_single_tenant_v1_v2_tokens.py  test_user.py  test_validate_token.py  utils.py
tests/multi_tenant/: common.py  conftest.py  test_multi_tenant.py  test_settings.py  test_websocket.py  websocket.py
tests/multi_tenant/multi_auth/: README.md  test_auto_error.py
tests/multi_tenant_b2c/: common.py  conftest.py  test_multi_tenant.py  test_settings.py
tests/multi_tenant_b2c/multi_auth/: README.md  test_auto_error.py
tests/single_tenant/: conftest.py  test_single_tenant.py  test_single_tenant_v1_v2_tokens.py
usage-and-faq/accessing_the_user/: index.html
usage-and-faq/admin_consent_when_logging_in/: index.html
usage-and-faq/calling_your_apis_from_python/: index.html
usage-and-faq/graph_usage/: index.html
usage-and-faq/guest_users/: index.html
usage-and-faq/locking_down_on_roles/: index.html
usage-and-faq/testing/: index.html
usage-and-faq/troubleshooting/: index.html
