[tool.poetry]
name = "intility-auth-fastapi"
version = "0.1.0"  # Remember to change in __init__.py as well
description = "Azure AD authentication for Intility"
authors = ["Jonas Krüger Svensson <jonas.svensson@intility.no>"]
readme = "README.md"
homepage = "https://github.com/intility/intility-auth-fastapi"
repository = "https://github.com/intility/intility-auth-fastapi"
documentation = "https://github.com/intility/intility-auth-fastapi"
keywords = [
    'async', 'fastapi', 'azuread', 'ad', 'azure', 'azure ad', 'starlette', 'authentication'
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.68.0"}
aiohttp = "^3.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.5.1"
requests-mock = "^1.8.0"
pytest-freezegun = "^0.4.2"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["metroid"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER'
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
