[tool.poetry]
name = "fastapi-azure-auth"
version = "3.3.0"  # Remember to change in __init__.py as well
description = "Easy and secure implementation of Azure AD for your FastAPI APIs"
authors = ["Jonas Krüger Svensson <jonas.svensson@intility.no>"]
readme = "README.md"
homepage = "https://github.com/intility/fastapi-azure-auth"
repository = "https://github.com/intility/fastapi-azure-auth"
documentation = "https://github.com/intility/fastapi-azure-auth"
keywords = [
    'ad',
    'async',
    'asyncio',
    'authentication',
    'azure',
    'azure ad',
    'azuread',
    'fastapi',
    'multi tenant',
    'oauth2',
    'oidc',
    'security',
    'single tenant',
    'starlette',
    'trio',
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">0.68.0"
cryptography = ">35.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = ">0.18.2"


[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"
black = "^20.8b1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.2"
pytest-mock = "^3.5.1"
requests-mock = "^1.8.0"
pytest-socket = "^0.4.0"
pytest-dotenv = "^0.5.2"
pytest-aiohttp = "^0.3.0"
uvicorn = "^0.17.5"
pytest-freezegun = "^0.4.2"
pytest-cases = "^3.6.3"
anyio = "^3.3.4"
trio = "^0.19.0"
respx = "^0.19.1"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
    (\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|\venv|\.github|\docs|\tests|\__pycache__)
)
'''

[tool.isort]
profile = "black"
src_paths = ["fastapi_azure_auth"]
combine_as_imports = true
line_length = 120
sections = [
    'FUTURE',
    'STDLIB',
    'THIRDPARTY',
    'FIRSTPARTY',
    'LOCALFOLDER',
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
